--- a/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
+++ b/Web/Areas/Logistics/Views/Donation/addNewDonation.cshtml
@@ -1,22 +1,16 @@
 ﻿@model Cats.Areas.Logistics.Models.DonationViewModel
 @using Cats.Helpers
-
-
-
 @{
     ViewBag.Title = "Create";
     const string pageName = "Logistics.Donation.Create";
 }
-
-
-
-<div class="modal-dialog  ">
+<div class="modal-dialog modal-lg">
     <div class="modal-content">
 
 
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3 id="myModalLabel">@Html.Translate("Add New Receive Plan")</h3>
+            <h4 id="myModalLabel">@Html.Translate("Add New Receive Plan")</h4>
         </div>
         @{
             var siNo = "0";
@@ -26,12 +20,12 @@
             }
         }
 
-        @using (Html.BeginForm("Save", "Donation", new { siNumber = siNo }, FormMethod.Post, new { @class = "modal-form", id = "myModal" }))
+        @using (Html.BeginForm("Save", "Donation", new { siNumber = siNo }, FormMethod.Post, new { @class = "modal-body", id = "myModal" }))
         {
 
 
 
-            <table border="0" class="form-horizontal ">
+            <div border="0" class="form-horizontal ">
                 @*<tr style="width: 300px">
                     <td style="width:50%; padding-bottom: 10px; padding-top:10px;">
 
@@ -44,107 +38,88 @@
                         </div>
                     </td>
                 </tr>*@
-                <tr style="width: 300px">
-
-
-                    <td style="width: 50%; padding-bottom: 10px; padding-top: 10px;">
-                        <div class="control-label">
+                <div class="row">
+                    <div class="col-md-6 form-group">
+                        <div class="control-label col-md-4">
                             @Html.Label(@Html.Translate("SI Number"))
                         </div>
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.SINumber, new { @class = "addresspicker", required = "required", autocomplete = "off" })<span class="hide help-inline">Required!</span>
+                        <div class="col-md-8">
+                            @Html.TextBoxFor(model => model.SINumber, new {@class = "addresspicker form-control", required = "required", autocomplete = "off"})<span class="hide help-inline">Required!</span>
                             @Html.ValidationMessageFor(m => m.SINumber)
 
                         </div>
 
-                    </td>
-
-
-                    <td style="width: 50%; padding-bottom: 10px; padding-top: 10px;">
-                        <div class="control-label">
+                    </div>
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Quantity"))
                         </div>
-                        <div class="controls">
-                            @Html.TextBoxFor(model => model.WieghtInMT, new { @readonly = "readonly", Value = "" })<span class="hide help-inline">Required!</span>
+                        <div class="col-md-8">
+                            @Html.TextBoxFor(model => model.WieghtInMT, new {@readonly = "readonly", Value = "", @class="form-control"})<span class="hide help-inline">Required!</span>
                             @Html.ValidationMessageFor(m => m.WieghtInMT)
 
                         </div>
 
-                    </td>
-                <tr style="width: 300px">
-                    <td style="width: 50%; padding-bottom: 10px;">
-                        <div class="control-label">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.LabelFor(model => model.ETA, @Html.Translate("ETA"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.ETA, new { @readonly = "readonly", Value = "" }))
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.ETA, new { @readonly = "readonly", Value = "", @class="form-control" }))
                             @Html.ValidationMessageFor(model => model.ETA)
                         </div>
-                    </td>
-
-
-                    <td style="width: 50%; padding-bottom: 10px;">
-                        <div class="control-label">
+                    </div>
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Donor"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.DonorName, new { @readonly = "readonly" })) @*new SelectList(Model.Donors, "DonorID", "Name")*@
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.DonorName, new { @readonly = "readonly", @class="form-control" })) @*new SelectList(Model.Donors, "DonorID", "Name")*@
                         </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 50%; padding-bottom: 10px;">
-
-                        <div class="control-label">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Commodity Type"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.CommomdityTypeName, new { @readonly = "readonly" })) @*, new SelectList(Model.CommodityTypes, "CommodityTypeID", "Name")*@
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.CommomdityTypeName, new { @readonly = "readonly", @class="form-control" })) @*, new SelectList(Model.CommodityTypes, "CommodityTypeID", "Name")*@
                         </div>
-
-
-                    </td>
-
-                    <td style="width: 50%; padding-bottom: 10px;">
-                        <div class="control-label">
+                    </div>
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Parent Commodity"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.ParentCommodityName, new { @readonly = "readonly" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.ParentCommodityName, new { @readonly = "readonly", @class="form-control" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
                         </div>
-
-
-
-
-
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 50%; padding-bottom: 10px;">
-                        <div class="control-label">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 form-group">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Program"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.ProgramName, new { @readonly = "readonly" })) @*, new SelectList(Model.Programs, "ProgramID", "Name")*@
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.ProgramName, new { @readonly = "readonly", @class="form-control" })) @*, new SelectList(Model.Programs, "ProgramID", "Name")*@
                         </div>
-                    </td>
+                    </div>
+                    <div class="col-md-6 form-group">
 
-                    <td style="width: 50%; padding-bottom: 10px;">
-
-                        <div class="control-label">
+                        <div class="col-md-4 control-label">
                             @Html.Label(@Html.Translate("Child Commodity"))
                         </div>
-                        <div class="controls">
-                            @(Html.TextBoxFor(model => model.CommodityName, new { @readonly = "readonly" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
+                        <div class="col-md-8">
+                            @(Html.TextBoxFor(model => model.CommodityName, new { @readonly = "readonly", @class="form-control" })) @*, new SelectList(Model.Commodities, "CommodityID", "Name")*@
                         </div>
 
-                    </td>
-                </tr>
-
-
-
-
-            </table>
+                    </div>
+                </div>
+            </div>
 
 
         }
@@ -210,9 +185,6 @@
 
     $('#SINumber').typeahead({ source: sourceArr });
 
-
-
-
     function onSave(e) {
 
         if ($('#SINumber').val() === "") {
@@ -229,10 +201,6 @@
             window.location = "@Url.Action("SaveHeader", "Donation")" + "?id=" + $("#SINumber").val();
 
         }
-
-
-
-
     };
 
     $("#SINumber").on('change', function () {
