--- a/Web/Areas/Hub/Views/InternalMovement/Create.cshtml
+++ b/Web/Areas/Hub/Views/InternalMovement/Create.cshtml
@@ -1,16 +1,34 @@
 ﻿@model Cats.Models.Hubs.ViewModels.InternalMovementViewModel
 @using Cats.Web.Hub.Helpers
 @{
-    ViewBag.Title = Html.Translate("Record New Internal Transfer");
-    Layout = "~/Views/Shared/_Layout.cshtml";
+
+    ViewBag.PageTitle = Html.Translate("New Internal Transfer");
+    Layout = "~/Views/Shared/DefaultLayout.cshtml";
 }
-@*<script src="../../Scripts/jquery.validate.unobtrusive.bQuery.js" type="text/javascript"></script>*@
-@Html.Partial("DisplayHub")
-<p>
-    @Html.Translate("Please use this form to record transfer of commodities from one store to the other.")
-</p>
-@Html.Partial("EditPartial")
+
+<!-- #region Container -->
+
+    <div class="portlet light   ">
+        <div class="portlet-title">
+            <div class="caption font-green-sharp">
+                <i class="fa fa-list font-green-sharp"></i> @ViewBag.PageTitle
+               
+            </div>
+            <div class="actions">
+                <a class="btn btn-icon-only btn-default fullscreen" href=" javascript:;" data-original-title="" title=""></a>
+            </div>
+        </div>
+        
+
+        <div class="portlet-body">
+            <div class="caption-helper">
+                @Html.Translate("Please use this form to record transfer of commodities from one store to the other.")
+            </div>
+            <hr/>
+            @Html.Partial("EditPartial")
+
+        </div>
+    </div>
 
 
-
-
+<!-- #endregion -->
